--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test": "NODE_ENV=test jest --passWithNoTests --runInBand",
     "test:migration:run": "npm run test:load-envs prisma migrate deploy",
     "test:migration:generate": "npm run test:load-envs prisma migrate dev",
-    "test:watch": "jest --watch --passWithNoTests --runInBand",
+    "test:watch": "jest --watchAll --passWithNoTests --runInBand",
     "test:load-envs": "dotenv -e .env.test",
     "test:seed": "npm run test:load-envs prisma db seed",
     "dev:load-envs": "dotenv -e .env.development",
@@ -25,6 +25,8 @@
     "dev": "NODE_ENV=development nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register ./src/server.ts' -e ts"
   },
   "keywords": [
+
+    
     "driven.t",
     "back-end",
     "typescript",
@@ -56,6 +58,7 @@
     "eslint-plugin-boundaries": "^3.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.32.1",
     "git-commit-msg-linter": "^4.1.2",
     "husky": "^8.0.1",
     "jest": "^26.6.3",
